welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:4: error: '(' expected but identifier found.
			if value==nums(i) {return i}
                           ^indexOfValue:5: error: illegal start of simple expression
		}
                ^